--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
   <dependencies>
 
     <dependency>
+      <groupId>com.walterjwhite.java.dependencies</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>0.0.17</version>
+    </dependency>
+
+
+    <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20201115</version>
