--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,10 @@
   <dependencies>
 
     <dependency>
-      <groupId>com.walterjwhite.java.dependencies</groupId>
-      <artifactId>logback-classic</artifactId>
-      <version>0.0.17</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.0-alpha1</version>
     </dependency>
-
 
     <dependency>
       <groupId>org.json</groupId>
@@ -40,12 +39,6 @@
       <version>1.5.1</version>
     </dependency>
 
-
-    <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>1.2.75</version>
-    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
